<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dodger_blue">

    <ImageView
        android:id="@+id/icon_php"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_patient_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="80dp"
        android:text="@string/patient_registration"
        android:textAlignment="center"
        android:typeface="serif"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/icon_php"
        app:layout_constraintBottom_toBottomOf="@id/et_patient_full_name"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/et_patient_full_name"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:background="@color/white"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_patient_registration" />

    <EditText
        android:id="@+id/et_patient_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:background="@color/white"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_patient_full_name" />

    <EditText
        android:id="@+id/et_patient_username"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username_doctor"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_patient_email" />

    <EditText
        android:id="@+id/phone_patient"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/telephone_number"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_patient_username" />

    <EditText
        android:id="@+id/et_patient_password"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_patient" />

    <EditText
        android:id="@+id/et_patient_re_password"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/re_enter_password"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_patient_password" />

    <Button
        android:id="@+id/patient_registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:typeface="serif"
        android:text="@string/doctor_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_patient_re_password"
        app:layout_constraintVertical_bias="0.113" />

</androidx.constraintlayout.widget.ConstraintLayout>
