<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/cadet_blue">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/welcome_to_personal_health_record"
        android:textAlignment="center"
        android:textColor="@color/off_white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon_php"
        android:layout_width="wrap_content"
        android:layout_height="189dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/heartbeat_image"
        android:src="@drawable/heartbeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/get_started_btn_doctor"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="105dp"
        android:text="@string/get_started_as_doctor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/get_started_btn_patient"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/get_started_btn_patient"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="105dp"
        android:text="@string/get_started_as_patient"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/get_started_btn_doctor" />

    <TextView
        android:id="@+id/getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:text="@string/get_started_as"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_php" />

</androidx.constraintlayout.widget.ConstraintLayout>
