<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dodger_blue">

    <!-- Content from LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:id="@+id/linear_layout"
        android:visibility="visible"
        tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/icon_php"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/heartbeat_image"
        android:src="@drawable/img_logo" />

    <TextView
        android:id="@+id/tv_patient_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:text="Patient Message"
        android:textAlignment="center"
        android:typeface="serif"
        android:textColor="@color/black"
        android:textSize="20sp" />
</LinearLayout>

    <!-- Constraints for the LinearLayout -->
    <androidx.constraintlayout.widget.Guideline
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="0dp"
    app:layout_constraintGuide_percent="0.5" />

    <Spinner
        android:id="@+id/select_doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>


    <EditText
        android:id="@+id/patient_msg_to_doctor"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_doctor"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_message_here"
        android:background="@color/cadet_blue"/>
    <Button
        android:id="@+id/btn_msg_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="25dp"
        android:text="@string/send_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_msg_to_doctor"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="228dp"
        android:text="@string/encrypt_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_msg_to_doctor"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/back_to_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="22dp"
        android:text="@string/back_to_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>